--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -42,3 +42,5 @@ jobs:
                 with:
                     push: true
                     tags: ximaz/epitech-coding-style-aarch64:latest
+                    cache-from: |
+                        type=local,src=.
