moving banana clone right above the build

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -44,4 +44,4 @@ jobs:
                     cache-from: |
                         type=local,src=vera
                     cache-to: |
-                        type=local,dest=./vera
+                        type=local,dest=/vera
