--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -28,6 +28,9 @@ jobs:
             -   name: "Set up Docker Buildx"
                 uses: docker/setup-buildx-action@v3
                 with:
+                    driver-opts: |
+                        image=moby/buildkit:v0.12.0
+                    buildkitd-flags: --debug
                     platforms: linux/arm64
 
             -   name: Login to Docker Hub
