--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -42,6 +42,7 @@ jobs:
             -   name: Build and push
                 uses: docker/build-push-action@v5
                 with:
+                    context: .
                     push: true
                     platforms: linux/arm64
                     tags: ximaz/epitech-coding-style-aarch64:latest
